init: Add README and Testing Data.

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     border-width: 0;
     padding: 0;
-    background-image: url('/lib/img/background.jpg');
+    background-image: url('../../lib/img/background.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
