--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -157,6 +157,17 @@ body {
     border-bottom: none;
 }
 
+#post-title-list li a {
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    line-height: 36px;
+}
+
+#post-title-list li a:hover {
+    text-decoration: underline;
+}
+
 #article-container {
     flex-grow: 1;
     height: 100%;
@@ -173,7 +184,7 @@ body {
 }
 
 .active-title {
-    background: #0b9;
+    background: #0b9 !important;
     color: #fff;
 }
 
